--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="col-sm-6">
                       <div class="card-body ">
-                      <img class="img-fluid women-img d-flex align-items-center" src="image/women.png" alt="">
+                      <img class=" women-img d-flex align-items-center" src="Image/girl.png" alt="">
                     </div>
         </div>
     </div>
